tests/rosetta/out/C/chat-server.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int broadcast(char *msg) { printf("%s\n", msg); }

static int add_clients;
int add(char *name) {
  list_string tmp6 = list_string_create(1);
  tmp6.data[0] = name;
  list_string tmp7 = concat_list_string(add_clients, tmp6);
  clients = tmp7;
  char *tmp8 = concat_string("+++ \"", name);
  char *tmp9 = concat_string(tmp8, "\" connected +++\n");
  broadcast(tmp9);
}

int send(char *name, char *msg) {
  char *tmp10 = concat_string(name, "> ");
  char *tmp11 = concat_string(tmp10, msg);
  char *tmp12 = concat_string(tmp11, "\n");
  broadcast(tmp12);
}

static int _remove_clients;
int _remove(char *name) {
  clients = removeName(_remove_clients, name);
  char *tmp13 = concat_string("--- \"", name);
  char *tmp14 = concat_string(tmp13, "\" disconnected ---\n");
  broadcast(tmp14);
}

int removeName(list_string names, char *name) {
  list_string tmp1 = {0, NULL};
  int out = tmp1;
  for (int tmp2 = 0; tmp2 < names.len; tmp2++) {
    char *n = names.data[tmp2];
    if ((strcmp(n, name) != 0)) {
      list_string tmp3 = list_string_create(1);
      tmp3.data[0] = n;
      list_string tmp4 = concat_list_string(out, tmp3);
      out = tmp4;
    }
  }
  return out;
}

int main() {
  list_string tmp5 = {0, NULL};
  int clients = tmp5;
  (add_clients = clients, add("Alice"));
  (add_clients = clients, add("Bob"));
  send("Alice", "Hello Bob!");
  send("Bob", "Hi Alice!");
  (_remove_clients = clients, _remove("Bob"));
  (_remove_clients = clients, _remove("Alice"));
  broadcast("Server stopping!\n");
}

int main() {
  main();
  return 0;
}
